[project]                                                                                                                                                                                                   
name = "wavtokenizer"                                                                                                                                                                                       
version = "0.1.0"                                                                                                                                                                                           
description = "Discrete audio codec for audio language modeling"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.1",
    "scipy>=1.10.1",
    "librosa",
    "soundfile>=0.12.1",
    "encodec>=0.1.1",
    "einops>=0.6.1",
    "pyyaml>=6.0",
    "huggingface_hub>=1.7.0",
    "numpy>=2.4.0",
    "torchcodec>=0.10.0",
]

[project.optional-dependencies]
train = [
    "transformers>=4.28.1",
    "pytorch-lightning>=1.8.6",
    "fairseq",
    "torchcrepe",
    "pesq",
    "matplotlib>=3.7.1",
    "tensorboardX>=2.6",
    "jsonargparse[signatures]>=4.15.2",
]

[tool.setuptools.packages.find]
include = ["decoder*", "encoder*", "configs*"]

[tool.setuptools.package-data]
configs = ["*.yaml"]
